Code clean up and migration to the newest Java version